--- a/S3.md
+++ b/S3.md
@@ -37,8 +37,7 @@ Log into your AWS account and open up your developer console (https://console.aw
 Once you’ve navigated to your S3 dashboard, click the blue `Create Bucket` button on the top left-hand corner. Enter a name for your new bucket (think of the bucket’s name like you would a web address), select your preferred AWS region (`US-East` or `US-West`), and click `Next`. Easy!
 
 
-
-![](Create_new_bucket.png)
+<img src="Create_new_bucket.png"/>
 
 Now, you’ll see a number of ‘properties’ available for your bucket. We won’t be using any of them today in the tutorial, but do take a look at the `Default Encryption` property near the bottom of the list. One cool thing about S3 is that you can choose to have your data automatically encrypted upon upload for security. Let's skip this for now and click `Next`. 
 
