--- a/S3.md
+++ b/S3.md
@@ -41,7 +41,7 @@ Once you’ve navigated to your S3 dashboard, click the blue `Create Bucket` but
 
 Now, you’ll see a number of ‘properties’ available for your bucket. We won’t be using any of them today in the tutorial, but do take a look at the `Default Encryption` property near the bottom of the list. One cool thing about S3 is that you can choose to have your data automatically encrypted upon upload for security. Let's skip this for now and click `Next`. 
 
-![](Bucket_properties.png)
+<img src="public/stylesheets/Bucket_properties.png"/>
 
 
 We now have the opportunity to set specific permissions for our bucket. Again, we’re not going to worry about security details today, so keep the default settings and click `Next`. Finally, we review our bucket’s settings. Once you’ve done so, click `Create Bucket`.
@@ -61,13 +61,13 @@ Since we haven’t uploaded anything to our bucket yet, it should be empty. Clic
 
 Like when we first created our bucket, we’ll be given the options to set permissions on our new object, enable data encryption, and add tags, among other properties. Keep the default settings and click `Next` until you get to the final `Review` page. If everything looks good, click `Upload`. You’ll be brought back to your bucket’s home screen, where you should see your uploaded file. 
 
-![](New_object_success.png)
+<img src="public/stylesheets/New_object_success.png"/>
 
 Congratulations! You’ve added your first object!
 
 Now that we’ve added our file to our bucket, let’s try downloading it. This step is pretty easy -- click the checkbox next to your file and select Download. Your download should start immediately.
 
-![](Screen Shot 2017-12-31 at 11.50.50 AM.png)
+<img src="public/stylesheets/Screen Shot 2017-12-31 at 11.50.50 AM.png"/>
 
 
 Pretty easy, huh?
