--- a/S3.md
+++ b/S3.md
@@ -1,8 +1,8 @@
 # S3 (Or, Simple Storage Service)
 
-### Let’s start with the basics. What is S3? What are its primary functions? How is it used in apps deployed on AWS?
+<img width="400" src="public/stylesheets/amazon-s3_preview.png"/>
 
-![]("https://www.nuxeo.com/assets/imgs/blog/S3%20Logo.png")
+### Let’s start with the basics. What is S3? What are its primary functions? How is it used in apps deployed on AWS?
 
 As its name implies, S3’s primary function is storage. In the context of a web app, an S3 acts as a storage facility for any kind of data in any format you might need for your website (e.g. image files, text files, CSS files, datasets). In addition to simply storing data, S3 can also be used as a powerful tool for data analytics. 
 
